--- a/AndBibleTest/.classpath
+++ b/AndBibleTest/.classpath
@@ -4,6 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs/robolectric-2.1-20130517.204520-6-jar-with-dependencies.jar" sourcepath="libs/robolectric-2.1-20130517.204520-6-sources.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-jdk14-1.7.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AndBible"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="C:/Development/tools/android-sdk/platforms/android-8/android.jar"/>
