--- a/jsword-tweaks/.classpath
+++ b/jsword-tweaks/.classpath
@@ -6,5 +6,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jsword"/>
 	<classpathentry kind="lib" path="libs/mmseg4j-all-1.8.4.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/slf4j-jdk14-1.7.2.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/httpclient-4.2.3.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/httpcore-4.2.3.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/javatar-2.5.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/jdom2-2.0.4.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/lucene-analyzers-3.0.3.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/lucene-core-3.0.3.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/lucene-smartcn-3.0.3.jar"/>
+	<classpathentry kind="lib" path="/jsword/lib/jars/lucene-snowball-3.0.3.jar"/>
+	<classpathentry kind="lib" path="libs/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
