--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -26,17 +26,17 @@
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook"
                   android:label="@string/choosePassageBookName"
-                  android:configChanges="locale"
+                  android:configChanges="keyboardHidden|locale"
                   android:theme="@android:style/Theme.Black">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageChapter"
                   android:label="@string/choosePassageChapterName"
-                  android:configChanges="locale"
+                  android:configChanges="keyboardHidden|locale"
                   android:theme="@android:style/Theme.Black">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageVerse"
                   android:label="@string/choosePassageVerseName"
-                  android:configChanges="locale"
+                  android:configChanges="keyboardHidden|locale"
                   android:theme="@android:style/Theme.Black">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.Search"
@@ -149,5 +149,12 @@
 
 <!-- allow use on Google TV -->
 <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+
+<supports-screens
+	android:smallScreens="true"
+	android:normalScreens="true"
+	android:largeScreens="true"
+	android:anyDensity="true"
+/>
 
 </manifest> 
