--- a/AndBible/project.properties
+++ b/AndBible/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../android-support-v7-appcompat
+android.library.reference.1=../../../../../../../opt/android-sdk-linux/extras/android/support/v7/appcompat
