--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:installLocation="auto"
       android:versionName="20131228" android:versionCode="121">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19"/>
-    <application android:icon="@drawable/bible" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/Theme.AppCompat" android:allowBackup="true">
+    <application android:icon="@drawable/ichthys" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/Theme.AppCompat" android:allowBackup="true">
         <!-- deprecated but necessary to prevent old shortcut breaking -->
         <activity android:name=".StartupActivity"
                   android:label="@string/app_name"
