--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:installLocation="auto"
       android:versionName="20140110" android:versionCode="123">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
-    <application android:icon="@drawable/ichthys" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/Theme.AppCompat" android:allowBackup="true">
+    <application android:icon="@drawable/ichthys" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AppThemeNight" android:allowBackup="true">
         <!-- deprecated but necessary to prevent old shortcut breaking -->
         <activity android:name=".StartupActivity"
                   android:label="@string/app_name"
@@ -27,17 +27,14 @@
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook"
                   android:label="@string/choosePassageBookName"
                   android:configChanges="keyboardHidden|locale">
-                   <!-- android:theme="@android:style/Theme.Black" -->
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageChapter"
                   android:label="@string/choosePassageChapterName"
                   android:configChanges="keyboardHidden|locale">
-                  <!-- android:theme="@android:style/Theme.Black" -->
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageVerse"
                   android:label="@string/choosePassageVerseName"
                   android:configChanges="keyboardHidden|locale">
-                   <!-- android:theme="@android:style/Theme.Black" -->
         </activity>
         <activity android:name="net.bible.android.view.activity.search.Search"
                   android:label="@string/search"
