--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -8,7 +8,7 @@
         <!-- deprecated but necessary to prevent old shortcut breaking -->
         <activity android:name=".StartupActivity"
                   android:label="@string/app_name"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,11 +18,11 @@
         </activity>
         <activity android:name="net.bible.android.view.activity.page.MainBibleActivity"
                   android:label="@string/app_name"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.ChooseDocument"
                   android:label="@string/chooseBook"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.GridChoosePassageBook"
                   android:label="@string/choosePassageBookName"
@@ -38,96 +38,96 @@
         </activity>
         <activity android:name="net.bible.android.view.activity.search.Search"
                   android:label="@string/search"
-                  android:configChanges="keyboardHidden|orientation|locale"
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale"
                   android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.SearchResults"
                   android:label="@string/search"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.SearchIndex"
                   android:label="@string/search_index"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.search.SearchIndexProgressStatus"
                   android:label="@string/search_index"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.footnoteandref.FootnoteAndRefActivity"
                   android:label="@string/notes"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.bookmark.Bookmarks"
                   android:label="@string/bookmarks"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.bookmark.BookmarkLabels"
                   android:label="@string/bookmark_labels"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.comparetranslations.CompareTranslations"
                   android:label="@string/compare_translations"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.mynote.MyNotes"
                   android:label="@string/mynotes"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.ChooseDictionaryWord"
                   android:label="@string/dictionary"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.genbookmap.ChooseGeneralBookKey"
                   android:label="@string/general_book"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.genbookmap.ChooseMapKey"
                   android:label="@string/doc_type_map"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.ReadingPlanSelectorList"
                   android:label="@string/rdg_plan_selector_title"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.DailyReadingList"
                   android:label="@string/rdg_plan_title"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.readingplan.DailyReading"
                   android:label="@string/rdg_plan_title"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.settings.SettingsActivity"
                   android:label="@string/settings"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.navigation.History"
                   android:label="@string/history"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.speak.Speak"
                   android:label="@string/speak"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.Download"
                   android:label="@string/download"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.EnsureBibleDownloaded"
-                  android:configChanges="keyboardHidden|orientation|locale"
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale"
                   android:label="@string/download">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.DownloadStatus"
-                  android:configChanges="keyboardHidden|orientation|locale"
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale"
                   android:label="@string/progress_status">
         </activity>
         <activity android:name="net.bible.android.view.activity.download.ProgressStatus"
-                  android:configChanges="keyboardHidden|orientation|locale"
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale"
                   android:label="@string/progress_status">
         </activity>
         <activity android:name="net.bible.android.view.activity.help.Help"
                   android:label="@string/help"
-                  android:configChanges="keyboardHidden|orientation|locale">
+                  android:configChanges="keyboardHidden|orientation|screenSize|locale">
         </activity>
         
         <!-- allow use with Samsung Note multi-window http://stackoverflow.com/questions/14111052/adding-multi-window-support-to-android-application -->
