--- a/AndBible/AndroidManifest.xml
+++ b/AndBible/AndroidManifest.xml
@@ -4,7 +4,23 @@
       android:installLocation="auto"
       android:versionName="2.0.1" android:versionCode="130">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
-    <application android:icon="@drawable/ichthys" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AppThemeNight" android:allowBackup="true">
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    
+	<!-- allow use on Google TV -->
+	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+
+	<supports-screens
+		android:smallScreens="true"
+		android:normalScreens="true"
+		android:largeScreens="true"
+		android:anyDensity="true"
+	/>
+	
+	<application android:icon="@drawable/ichthys" android:label="@string/app_name" android:name="net.bible.android.BibleApplication" android:theme="@style/AppThemeNight" android:allowBackup="true">
         <!-- deprecated but necessary to prevent old shortcut breaking -->
         <activity android:name=".StartupActivity"
                   android:label="@string/app_name"
@@ -138,19 +154,5 @@
 		<meta-data android:name="com.sec.android.multiwindow.MINIMUM_SIZE_W" android:value="632.0dip" />
 		<meta-data android:name="com.sec.android.multiwindow.MINIMUM_SIZE_H" android:value="598.0dip" />
         
-</application>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.INTERNET"/>
-<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-
-<!-- allow use on Google TV -->
-<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-
-<supports-screens
-	android:smallScreens="true"
-	android:normalScreens="true"
-	android:largeScreens="true"
-	android:anyDensity="true"
-/>
-
+	</application>
 </manifest> 
