--- a/AndBible/build.gradle
+++ b/AndBible/build.gradle
@@ -20,20 +20,24 @@ repositories {
 dependencies {
     compile files('libs/android-support-v4.jar')
     compile 'com.android.support:appcompat-v7:19.0.+'
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile files('libs/mmseg4j-all-1.8.4.jar')
+    compile files('libs/jsword.jar')
     
     compile 'org.apache.lucene:lucene-core:3.0.3'
     compile 'org.apache.lucene:lucene-snowball:3.0.3'
     compile 'org.apache.lucene:lucene-analyzers:3.0.3'
 
-    compile group: 'org.jdom', name: 'jdom2', version: '2.0.5'
+    compile 'org.jdom:jdom2:2.0.5'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.3'
+    compile 'org.apache.commons:commons-compress:1.7'
+    compile 'org.slf4j:slf4j-android:1.7.7'
 }
 
 android {
     buildToolsVersion "19.1"
     compileSdkVersion 19
     
-     sourceSets {
+    sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
@@ -56,19 +60,45 @@ android {
     }
 }
 
-task copyJarDependencies(type: Copy) {
-    description = 'Used for Eclipse. Copies all dependencies to the libs directory. If there are any AAR files it will extract the classes.jar and rename it the same as the AAR file but with a .jar on the end.'
-    libDir = new File(project.projectDir, '/libs')
-    println libDir
-    println 'Adding dependencies from compile configuration'
-    configurations.compile.filter {it.name.endsWith 'jar'}.each { File file -> moveJarIntoLibs(file)}
+/**
+ * gradle does not know how to start the app automatically after an install so call adb to start app after installs
+ */
+task appStart(type: Exec, dependsOn: ':installDebug') {
+    // linux 
+    commandLine 'adb', 'shell', 'am', 'start', '-n', 'net.bible.android.activity/.StartupActivity'
+
+    // windows
+    // commandLine 'cmd', '/c', 'adb', 'shell', 'am', 'start', '-n', 'com.example/.MyActivity'      
 }
 
-void moveJarIntoLibs(File file){
-    println 'Added jar ' + file
-        copy{
-            from file
-            into 'libs-src'
-        }
+/**
+ * Support normal builds within eclipse by copying jars to libs folder
+ *
+ * see: https://github.com/Nodeclipse/nodeclipse-1/tree/master/org.nodeclipse.enide.editors.gradle
+ */
+task copyJarDependencies(type: Copy) {
+	description = 'Used for Eclipse. Copies all dependencies to the libs directory which is automatically scanned by eclipse.'
+	
+	// prepare special eclipse libs folder
+	File libsDir = new File(project.projectDir, '/libs')
+	if( !libsDir.exists() ) {
+		libsDir.mkdirs()
+	}
+	
+	// copy required jars to libs folder, but exclude android-support-v4.jar and similar support jars
+	println 'Adding dependencies from compile configuration to eclipse libs dir'
+	configurations.compile.filter {it.name.endsWith('jar') && !(it.name=~/support/)}.each { File file -> moveJarIntoDir(file, libsDir)}
 }
+
+void moveJarIntoDir(File file, File dir){
+	File targetFile = new File(dir, file.name)
+	if (!(targetFile.exists())) {
+		println 'Copying jar ' + file + ' to ' +dir
+		copy{
+			from file
+			into dir
+		}
+	}
+}
+
 
