--- a/AndBible/build.gradle
+++ b/AndBible/build.gradle
@@ -20,17 +20,19 @@ repositories {
 dependencies {
     compile files('libs/android-support-v4.jar')
     compile 'com.android.support:appcompat-v7:19.0.+'
-    compile files('libs/mmseg4j-all-1.8.4.jar')
+
     compile files('libs/jsword.jar')
-    
+
+	compile 'de.greenrobot:eventbus:2.2.1'
+	compile files('libs/mmseg4j-all-1.8.4.jar')
+	compile 'org.jdom:jdom2:2.0.5'
+	compile 'org.apache.httpcomponents:httpclient-android:4.3.3'
+	compile 'org.apache.commons:commons-compress:1.7'
+	compile 'org.slf4j:slf4j-android:1.7.7'
+
     compile 'org.apache.lucene:lucene-core:3.0.3'
     compile 'org.apache.lucene:lucene-snowball:3.0.3'
     compile 'org.apache.lucene:lucene-analyzers:3.0.3'
-
-    compile 'org.jdom:jdom2:2.0.5'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.3'
-    compile 'org.apache.commons:commons-compress:1.7'
-    compile 'org.slf4j:slf4j-android:1.7.7'
 }
 
 android {
