--- a/AndBible/.tx/config
+++ b/AndBible/.tx/config
@@ -6,3 +6,4 @@ file_filter = res/values-<lang>/strings.xml
 source_lang = en
 source_file = res/values/strings.xml
 lang_map = zh_TW: zh-rTW
+lang_map = az@latin: az
