--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
@@ -53,6 +55,7 @@ dependencies {
     compile files('libs/jsword.jar')
     compile files('libs/mmseg4j-all-1.8.4.jar')
 
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.google.dagger:dagger:2.10'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 
@@ -74,4 +77,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'junit:junit:4.12'
     testCompile 'org.robolectric:robolectric:3.3.1'
+}
+repositories {
+	mavenCentral()
 }
