--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -49,34 +49,34 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:design:25.3.1'
 
-    compile files('libs/jsword.jar')
-    compile files('libs/mmseg4j-all-1.8.4.jar')
+    implementation files('libs/jsword.jar')
+    implementation files('libs/mmseg4j-all-1.8.4.jar')
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.google.dagger:dagger:2.15'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.google.dagger:dagger:2.15'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
 
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'org.jdom:jdom2:2.0.6'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'org.apache.commons:commons-lang3:3.5'
-    compile 'org.apache.commons:commons-compress:1.12'
-    compile 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.5'
+    implementation 'de.greenrobot:eventbus:2.4.0'
+    implementation 'org.jdom:jdom2:2.0.6'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    implementation 'org.apache.commons:commons-lang3:3.5'
+    implementation 'org.apache.commons:commons-compress:1.12'
+    implementation 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.5'
 
-    compile 'org.apache.lucene:lucene-core:3.0.3'
-    compile 'org.apache.lucene:lucene-snowball:3.0.3'
-    compile 'org.apache.lucene:lucene-analyzers:3.0.3'
+    implementation 'org.apache.lucene:lucene-core:3.0.3'
+    implementation 'org.apache.lucene:lucene-snowball:3.0.3'
+    implementation 'org.apache.lucene:lucene-analyzers:3.0.3'
 
     // allow annotations like UIThread, StringRes see: https://developer.android.com/reference/android/support/annotation/package-summary.html
-    compile 'com.android.support:support-annotations:25.3.1'
+    implementation 'com.android.support:support-annotations:25.3.1'
 
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.robolectric:robolectric:3.8'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.robolectric:robolectric:3.8'
 }
 repositories {
 	mavenCentral()
