--- a/and-bible/build.gradle
+++ b/and-bible/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     ext.kotlin_version = '1.2.40'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
