--- a/and-bible/app/build.gradle
+++ b/and-bible/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation files('libs/jsword.jar')
     implementation files('libs/mmseg4j-all-1.8.4.jar')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.dagger:dagger:2.15'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
 
